public/enrichment/mart-visual-enrichment/app/css/app.css
.left-panel {
    border-right: 1px solid #FEDED9;
}

.right-panel {
    /*border: 1px solid #909DC7;*/
}

.table td {
    text-align: center;
}

input[type=text] {
    margin-top: 10px;
}

.mv-vis-container {}

.mv-table-container {
    overflow-y: auto;
    /*height: 40%;*/
}

.mve-select {
    margin: 20px auto 20px auto;
}

.mve-species h2 {
    color: #E94E77;
}

.enrichment h1, .enrichment h2 {
    text-align: center;
    margin: 100px auto 45px auto;
}

.mve-annotations {
    border: 1px solid red;
    padding: 20px;
}

body {
    margin: 20px auto 140px auto;
}


.modal-dialog {
    width: 80%;
}


@media (min-width: 1024px) {

.query-buttons {
    position: fixed;
    top: 70px;
    right: 0px;
}

}

